--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -63,7 +63,7 @@ jobs:
             fi
           done
   push_to_mirror:
-    needs: run_tests
+    needs: check_program_compilation
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
