--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -93,7 +93,7 @@ jobs:
         run: |
           cd -
           make clean
-  tests:
+  mirror:
     needs: check_program_compilation
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
