feat(main) utils and norm error Makefile

--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -13,6 +13,18 @@ env:
   MIRROR_URL: git@github.com:EpitechPromo2027/B-PSU-200-REN-2-1-minishell2-jean-yanis.jeffroy.git
 
 jobs:
+  utils:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository size
+        run: |
+          echo "::notice::Repository size: $(du -sh --exclude=.git . | cut -f1)
+      - name: Number of files
+        run: |
+          echo "::notice::Number of files: $(find . -type f | wc -l)"
+      - name: Number of lines
+        run: |
+          echo "::notice::Number of lines: $(find . -type f -exec wc -l {} + | awk '{s+=$1} END {print s}')"
   check_coding_style:
     runs-on: ubuntu-latest
     steps:
@@ -24,22 +36,32 @@ jobs:
           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
           sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
           sudo apt-get update
-      - name: Run coding style
+      - name: Pull coding style docker image
         run: |
           docker pull ghcr.io/epitech/coding-style-checker:latest
+      - name: Run coding style
+        run: |
           docker run --rm -i -v "$(pwd)":"/mnt/delivery" -v "$(pwd)":"/mnt/reports" ghcr.io/epitech/coding-style-checker:latest "/mnt/delivery" "/mnt/reports"
       - name: Output coding style report
         if: always()
         shell: bash
         run: |
+          is_error=false
           cat coding-style-reports.log | while read line; do
             file_error=$(echo "$line" | cut -d: -f1)
             line_error=$(echo "$line" | cut -d: -f2)
             error_type=$(echo "$line" | cut -d: -f3)
             error=$(echo "$line" | cut -d: -f4)
             title=$(echo "$error_type coding style error")
+            if [ "$error_type" != "MAJOR" ] && [ "$error_type" != "MINOR" ] && [ "$error_type" != "INFO" ]; then
+              continue
+            fi
             echo "::error file=$file_error,line=$line_error,title=$title::$error"
+            is_error=true
           done
+          if [ "$is_error" = true ]; then
+            exit 1
+          fi
   check_program_compilation:
     needs: check_coding_style
     runs-on: ubuntu-latest
