--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -16,6 +16,10 @@ jobs:
   utils:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+      - name: ls
+        run: |
+          echo "::notice::$(ls -a)"
       - name: Repository size
         run: |
           echo "::notice::Repository size: $(du -sh --exclude=.git . | cut -f1)"
